# SVF-dynamic

include/MemoryModel/: ConsG.h  GenericGraph.h  LocationSet.h  MemModel.h  PAG.h  PAGBuilder.h  PointerAnalysis.h  PointsToDS.h
include/WPA/: Andersen.h  AndersenDynamic.h  DynamicAndersenBase.h  WPASolver.h
lib/: CMakeLists.txt
lib/MemoryModel/: ConsG.cpp  LocMemModel.cpp  MemModel.cpp  PAG.cpp  PAGBuilder.cpp  PointerAnalysis.cpp
lib/Util/: ExtAPI.cpp  PTAStat.cpp
lib/WPA/: Andersen.cpp  AndersenDynamic.cpp
tools/: CMakeLists.txt
tools/Dynamic/: CMakeLists.txt  main.cpp
tools/WPA/: CMakeLists.txt
